--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,8 +17,8 @@
                         </div>
                         <div class="text-theme mt-20">
                             <ul class="list-inline">
-                                <li><a href="https://bitbucket.org/{{ site.bitbucket }}"><i class="fa fa-github fa-round"></i></a></li>
-                                <li><a href="https://github.com/{{ site.github }}"><i class="fa fa-bitbucket fa-round"></i></a></li>
+                                <li><a href="https://github.com/{{ site.github }}"><i class="fa fa-github fa-round"></i></a></li>
+                                <li><a href="https://bitbucket.org/{{ site.bitbucket }}"><i class="fa fa-bitbucket fa-round"></i></a></li>
                                 <li><a href="https://stackoverflow.com/users/{{ site.stack_overflow }}"><i class="fa fa-stack-overflow fa-round"></i></a></li>
                             </ul>
                         </div>
