Add Calendly widget to book phone call

--- a/_layouts/full_width.html
+++ b/_layouts/full_width.html
@@ -11,6 +11,12 @@
     </div>
     {% include footer.html %}
     {% include footer_js.html %}
+
+    <!-- Calendly badge widget begin -->
+    <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+    <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+    <script type="text/javascript">window.onload = function() { Calendly.initBadgeWidget({ url: 'https://calendly.com/francois-khawa/30min?hide_gdpr_banner=1&text_color=336fb6&primary_color=ff8f33', text: 'Book a phone call', color: '#ff8f33', textColor: '#ffffff' }); }</script>
+    <!-- Calendly badge widget end -->
 </body>
 
 </html>
